# capillarydetection

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE  LICENSE.md  README.MD  contributing.md  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yaml  package-lock.json  paper.bib  paper.md  pyproject.toml  requirements.txt  ter temp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: bug_template.md  feature_template.md
.github/workflows/: main.yml  master_capillaryweb.yml
algorithms/: Dockerfile
algorithms_HSV/: Dockerfile
algorithms_SSIM/: Dockerfile
backend/: Dockerfile  Dockerfile.prod  db.sqlite3  entrypoint.prod.sh  entrypoint.sh  manage.py  requirements.txt  requirementsLocal.txt  requirementsProd.txt
backend/backend_app/: manage.py
backend/backend_apps/: .env.sample
backend/frontend/: .env.development  package-lock.json  package.json  urls.py  webpack.config.js
backend/server/: celery.py  production.py  settings.py  urls.py  views.py  wsgi.py
backend/templates/: homepage.html
diagram/: paper2_drawing (2021_07_02 18_53_39 UTC).drawio  paper2_drawing.drawio  paper4.drawio
frontend/: Dockerfile  package-lock.json
frontend/my-app/: package-lock.json  package.json
frontend/web_frontend/: package-lock.json  package.json
frontend_GUI/: Dockerfile  Dockerfile.prod  entrypoint.prod.sh  package-lock.json
nginx/: Dockerfile  Dockerfile.prod  README.md  nginx.conf  nginx.prod.conf  nginx_root.conf
performanceTesting/: load_testing.py  workers.sh
ray/: algorithm_server.py
(+77 files in other folders)
